feat: adiciona FluentValidation, Serilog e exportação CSV
- Validações robustas em todos os DTOs
- Logs estruturados com Serilog (console + arquivo)
- Exportação de transações, categorias e metas em CSV
- Mensagens de erro personalizadas e em português

--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -19,5 +19,32 @@
     "ApiKey": "SG.SEU_API_KEY_AQUI",
     "FromEmail": "noreply@cleverbudget.com",
     "FromName": "CleverBudget"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/cleverbudget-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
