--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,6 @@
 [phases.setup]
 cmds = [
-  "wget https://dot.net/v1/dotnet-install.sh",
+  "curl -L https://dot.net/v1/dotnet-install.sh -o dotnet-install.sh",
   "chmod +x dotnet-install.sh",
   "./dotnet-install.sh --channel 9.0",
   "export PATH=$PATH:/root/.dotnet"
