Ajuste de deploy Railway

--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=cleverbudget.db"
+    "DefaultConnection": "Data Source=/data/cleverbudget.db"
   },
   "JwtSettings": {
     "SecretKey": "sua-chave-super-secreta-aqui-min-32-caracteres-ok",
@@ -48,3 +48,4 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
+
