--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,14 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "./dockerfile"
+dockerfilePath = "./Dockerfile"
+
+[deploy]
+# Comando de start da aplicação
+startCommand = "dotnet CleverBudget.Api.dll"
+
+# Bind da porta definida pelo Railway
+port = "${PORT}"
+
+[volumes]
+# Volume persistente para o banco SQLite
+data = "/data"
