--- a/CleverBudget.Api/CleverBudget.Api.csproj
+++ b/CleverBudget.Api/CleverBudget.Api.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
@@ -24,7 +25,7 @@
     <ProjectReference Include="..\CleverBudget.Infrastructure\CleverBudget.Infrastructure.csproj" />
     <ProjectReference Include="..\CleverBudget.Core\CleverBudget.Core.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
   <Content Include="wwwroot\**" CopyToOutputDirectory="PreserveNewest" />
 </ItemGroup>
