fix: registra ExportService e corrige connection string

--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Data Source=cleverbudget.db"
   },
   "JwtSettings": {
     "SecretKey": "sua-chave-super-secreta-aqui-min-32-caracteres-ok",
