refactor: limpeza completa de comentarios e melhorias
- Remove todos os comentarios // desnecessarios do codigo
- Mantem apenas comentarios /// (XML documentation)
- Remove comentarios # desnecessarios do .env
- Adiciona servico de email com Brevo/Sendinblue
- Adiciona funcionalidades de exportacao PDF
- Atualiza migrations do banco de dados
- Melhora configuracao para desenvolvimento local

--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -9,6 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=cleverbudget.db"
   },
+  "JwtSettings": {
+    "SecretKey": "",
+    "Issuer": "CleverBudget",
+    "Audience": "CleverBudgetUsers",
+    "ExpirationMinutes": 60
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
