--- a/CleverBudget.Api/appsettings.Production.json
+++ b/CleverBudget.Api/appsettings.Production.json
@@ -33,5 +33,10 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
+  },
+  "Brevo": {
+    "ApiKey": "",
+    "FromEmail": "",
+    "FromName": ""
   }
 }
