--- a/CleverBudget.Infrastructure/CleverBudget.Infrastructure.csproj
+++ b/CleverBudget.Infrastructure/CleverBudget.Infrastructure.csproj
@@ -11,8 +11,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="QuestPDF" Version="2025.7.3" />
+    <PackageReference Include="sib_api_v3_sdk" Version="4.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
