--- a/CleverBudget.Tests/CleverBudget.Tests.csproj
+++ b/CleverBudget.Tests/CleverBudget.Tests.csproj
@@ -5,15 +5,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="coverlet.collector" Version="6.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +30,8 @@
   <ItemGroup>
     <ProjectReference Include="..\CleverBudget.Api\CleverBudget.Api.csproj" />
     <ProjectReference Include="..\CleverBudget.Application\CleverBudget.Application.csproj" />
+    <ProjectReference Include="..\CleverBudget.Core\CleverBudget.Core.csproj" />
+    <ProjectReference Include="..\CleverBudget.Infrastructure\CleverBudget.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
