--- a/CleverBudget.Infrastructure/CleverBudget.Infrastructure.csproj
+++ b/CleverBudget.Infrastructure/CleverBudget.Infrastructure.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="QuestPDF" Version="2025.7.3" />
     <PackageReference Include="sib_api_v3_sdk" Version="4.0.2" />
