feat: implement rate limiting with AspNetCoreRateLimit
- Add AspNetCoreRateLimit package for API protection
- Configure IP-based rate limiting with tiered restrictions
- Development: 60 req/min, 1000 req/hour
- Production: 30 req/min, 500 req/hour, stricter auth limits
- Returns HTTP 429 when exceeded
- Protection against brute force, DDoS, and API abuse

--- a/CleverBudget.Api/appsettings.Production.json
+++ b/CleverBudget.Api/appsettings.Production.json
@@ -15,6 +15,35 @@
     "Audience": "CleverBudgetUsers",
     "ExpirationMinutes": 60
   },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 30
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1h",
+        "Limit": 500
+      },
+      {
+        "Endpoint": "*:/api/auth/register",
+        "Period": "1h",
+        "Limit": 3
+      },
+      {
+        "Endpoint": "*:/api/auth/login",
+        "Period": "15m",
+        "Limit": 5
+      }
+    ]
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console" ],
     "MinimumLevel": {
