--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -15,6 +15,11 @@
     "Audience": "CleverBudgetUsers",
     "ExpirationMinutes": 60
   },
+  "Cloudinary": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
