Adiciona backup/restore completo com dados de identidade e segurança aprimorada

--- a/CleverBudget.Api/appsettings.Production.json
+++ b/CleverBudget.Api/appsettings.Production.json
@@ -20,6 +20,13 @@
     "ApiKey": "",
     "ApiSecret": ""
   },
+  "BackupSettings": {
+    "EnableAutomaticBackups": true,
+    "RootPath": "/app/data/backups",
+    "RetentionDays": 14,
+    "Interval": "1.00:00:00",
+    "RunOnStartup": true
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
