--- a/CleverBudget.Api/appsettings.json
+++ b/CleverBudget.Api/appsettings.json
@@ -20,6 +20,13 @@
     "ApiKey": "",
     "ApiSecret": ""
   },
+  "BackupSettings": {
+    "EnableAutomaticBackups": false,
+    "RootPath": "Backups",
+    "RetentionDays": 7,
+    "Interval": "1.00:00:00",
+    "RunOnStartup": true
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
