--- a/CleverBudget.Api/Properties/launchSettings.json
+++ b/CleverBudget.Api/Properties/launchSettings.json
@@ -7,7 +7,9 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5220",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_LOG_LEVEL": "debug",
+        "OTEL_DOTNET_AUTO_LOG_DIRECTORY": "."
       }
     },
     "https": {
