--- a/CleverBudget.Api/appsettings.Development.json
+++ b/CleverBudget.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "BackupSettings": {
+    "EnableAutomaticBackups": false,
+    "RootPath": "Backups",
+    "RetentionDays": 7,
+    "Interval": "1.00:00:00",
+    "RunOnStartup": false
   }
 }
